Heading fixed plus text align center added to about section

--- a/wp-content/themes/analog/app/scss/_about.scss
+++ b/wp-content/themes/analog/app/scss/_about.scss
@@ -11,6 +11,7 @@
 
     @include breakpoint-down(small) {
       margin-bottom: 6rem;
+      text-align: center;
     }
   }
 
