--- a/wp-content/themes/analog/app/scss/_header.scss
+++ b/wp-content/themes/analog/app/scss/_header.scss
@@ -8,11 +8,17 @@
     position: absolute;
   }
 
-  nav {
+  &__wrapper {
     display: grid;
-    grid-auto-flow: column;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    grid-column: 1/5;
+    @include breakpoint-up(medium) {
+      grid-column: 2/12;
+    }
+  }
+
+  nav {
     padding-top: 4rem;
     padding-bottom: 4rem;
 
@@ -23,18 +29,12 @@
   }
 
   &__logo {
-    grid-column-start: 1;
-    grid-column-end: span 2;
+    grid-column: 1/3;
     display: block;
     width: 160px;
     height: 32px;
     background-repeat: no-repeat;
     background-image: url("../../../../uploads/2021/10/logo.svg");
-
-    @include breakpoint-up(medium) {
-      grid-column-start: 2;
-      grid-column-end: span 2;
-    }
 
     @include breakpoint-up(large) {
       width: 142px;
@@ -44,8 +44,7 @@
 
   &__some {
     display: flex;
-    grid-column-start: 10;
-    grid-column-end: span 2;
+    grid-column: 10/12;
     column-gap: 1.5rem;
     justify-self: end;
 
@@ -63,7 +62,7 @@
     }
   }
   &__toggle {
-    grid-column-end: 5;
+    grid-column: 4/5;
     display: grid;
     place-content: center;
     height: 24px;
@@ -72,7 +71,7 @@
     justify-self: end;
 
     @include breakpoint-up(medium) {
-      grid-column-end: 12;
+      grid-column: 10/12;
     }
 
     span,
@@ -142,8 +141,7 @@
   &__links {
     display: grid;
     grid-auto-flow: column;
-    grid-column-start: 5;
-    grid-column-end: span 5;
+    grid-column: 4/10;
     justify-self: center;
 
     li {
